--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
     }
 
     buildToolsVersion '28.0.1'
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -53,8 +57,9 @@ dependencies {
     compileOnly 'org.glassfish:javax.annotation:3.1.1'
 
     // RX
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.github.pwittchen:reactivenetwork-rx2:2.1.0'
 
     // Data binding
     annotationProcessor "com.android.databinding:compiler:3.1.4"
