--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
 
     dataBinding {
         enabled = true
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.application.chat.chatapplication"
         minSdkVersion 26
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,12 +39,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    // Backendless Imports
+    implementation group: 'com.backendless', name: 'backendless', version: '5.0.2'
+    implementation ( group: 'io.socket', name: 'socket.io-client', version: '1.0.0' ) {
+        //      excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
     // Internal Libraries
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:design:27.1.1'
 
     // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -53,6 +61,7 @@ dependencies {
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.android.support:support-annotations:28.0.0-rc01'
     annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
     compileOnly 'org.glassfish:javax.annotation:3.1.1'
 
