--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.application.chat.chatapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/application_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/application_logo_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:launchMode="singleTask">
         <activity
             android:name=".ui.home.HomeActivity"
-            android:theme="@style/AppTheme.Home">
+            android:theme="@style/AppTheme.HomeTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,16 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.chat.ChatActivity">
-        </activity>
-
+            android:name=".ui.chat.ChatActivity"
+            android:noHistory="true"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
         <activity
-            android:name=".ui.login.LoginActivity">
-        </activity>
-
+            android:name=".ui.login.LoginActivity" />
         <activity
-            android:name=".ui.signup.SignUpActivity">
-        </activity>
+            android:name=".ui.signup.SignUpActivity" />
     </application>
 
 </manifest>
