complete chat functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:launchMode="singleTask">
+        android:launchMode="singleInstance">
         <activity
             android:name=".ui.home.HomeActivity"
             android:theme="@style/AppTheme.HomeTheme">
